# inversions

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/basis_functions/: graph_bf.org  greedy_basis_tests.ipynb  greedy_basis_tests.org
notebooks/sf6_testing/: data.ipynb  data.py  intro.ipynb  intro.py  inversions_with_synthetic_data.ipynb  inversions_with_synthetic_data.py  simple_model.ipynb  simple_model.py  store_edgar_flux.ipynb  store_edgar_flux.py  synthetic_data.ipynb  synthetic_data.py
scripts/: collect_imports.py  find_jupyter_functions.py
src/inversions/: __init__.py  basis_algorithms.py  basis_functions.py  cli.py  dask_helpers.py  data_functions.py  models.py  plotting.py  regridding.py  utils.py
tests/: test_collect_imports.py
