[project]
name = "inversions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "flox>=0.10.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "numpyro[cpu]>=0.19.0",
    "openghg>=0.16.0",
    "opt-einsum>=3.4.0",
    "pandas>=2.3.3",
    "pymc>=5.25.1",
    "scipy>=1.16.2",
    "sparse>=0.17.0",
    "tfp-nightly>=0.26.0.dev20251015",
    "xarray>=2025.6",
]

[project.scripts]
inversions = "inversions:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
