[project]
name = "inversions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brendan Murphy", email = "brendan.murphy@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "dask-jobqueue>=0.9.0",
    "distributed>=2025.10.0",
    "flox>=0.10.7",
    "fluxy",
    "iris>=1.0.7",
    "jupytext>=1.17.3",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "numpy>=2.3.3",
    "numpyro[cpu]>=0.19.0",
    "openghg>=0.16.0",
    "openghg-inversions",
    "opt-einsum>=3.4.0",
    "pandas>=2.3.3",
    "pymc>=5.25.1",
    "scipy>=1.16.2",
    "sparse>=0.17.0",
    "tfp-nightly>=0.26.0.dev20251015",
    "xarray>=2025.6",
]

[project.scripts]
inversions = "inversions:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "ruff>=0.14.0",
]
notebook = [
    "jupytext>=1.17.3",
    "nbdime>=4.0.2",
    "nbformat>=5.10.4",
    "nbqa>=1.9.1",
]

[tool.jupytext]
formats = "ipynb,py:percent"
default_formats = "ipynb,py:percent"

[tool.uv.sources]
openghg-inversions = { git = "https://github.com/openghg/openghg_inversions.git" }
fluxy = { git = "https://github.com/openghg/fluxy.git" }

[tool.ruff]
line-length = 110
target-version = "py311"
